# codebase-memory-mcp

./: .clang-tidy  .cppcheck  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CXX23_MIGRATION.md  Makefile.cbm  PYTHON_LSP_PLAN.md  README.md  RELEASE_NOTES_v0.6.1.md  SECURITY.md  UPSTREAM_SYNC.md  flake.nix  install.ps1  install.sh  issue.md  lint-fixes.txt  plan.md  pr.md  server.json
.codebase-memory/: adr.md
.github/workflows/: _build.yml  _lint.yml  _smoke.yml  _soak.yml  _test.yml  codeql.yml  dry-run.yml  nightly-soak.yml  release.yml  scorecard.yml
docs/: BENCHMARK.md  BENCHMARK_PYTHON.md  CROSS_FILE_ARCHITECTURE.md  PHP_LSP_PRE_FLIGHT.md  PLAN_PHP_LSP_INTEGRATION.md  TEST_PLAN.md  TS_LSP_INTEGRATION_PLAN.md  index.html
graph-ui/: package-lock.json  package.json
internal/cbm/: ac.c  ac.cpp  ac.h  arena.c  arena.h  cbm.c  cbm.cpp  cbm.h  extract_calls.c  extract_calls.cpp  extract_channels.c  extract_channels.cpp  extract_defs.c  extract_defs.cpp  extract_env_accesses.c  extract_imports.c  extract_imports.cpp  extract_k8s.c  extract_node_stack.h  extract_semantic.c  extract_semantic.cpp  extract_type_assigns.c  extract_type_refs.c  extract_unified.c  extract_unified.cpp  extract_unified.h  extract_usages.c  grammar_nim.c  helpers.c  helpers.cpp  helpers.h  lang_specs.c  lang_specs.cpp  lang_specs.h  lsp_all.c  lsp_all.cpp  lz4_store.c  lz4_store.h  service_patterns.c  service_patterns.cpp  (+6 more)
internal/cbm/lsp/: c_lsp.c  c_lsp.cpp  c_lsp.h  cs_lsp.c  cs_lsp.cpp  cs_lsp.h  go_lsp.c  go_lsp.cpp  go_lsp.h  lsp_node_iter.h  php_lsp.c  php_lsp.cpp  php_lsp.h  py_lsp.c  py_lsp.cpp  py_lsp.h  scope.h  ts_lsp.c  ts_lsp.cpp  ts_lsp.h  type_registry.c  type_registry.h  type_rep.c  type_rep.cpp  type_rep.h
pkg/aur/: .SRCINFO  PKGBUILD
pkg/chocolatey/: codebase-memory-mcp.nuspec
pkg/chocolatey/tools/: chocolateyInstall.ps1
pkg/go/: go.mod
pkg/go/cmd/codebase-memory-mcp/: main.go
pkg/homebrew/Formula/: codebase-memory-mcp.rb
pkg/npm/: README.md  install.js  package.json
pkg/pypi/: README.md  pyproject.toml
pkg/pypi/src/codebase_memory_mcp/: _cli.py
pkg/scoop/: codebase-memory-mcp.json
pkg/winget/manifests/d/DeusData/CodebaseMemoryMcp/0.6.0/: DeusData.CodebaseMemoryMcp.installer.yaml  DeusData.CodebaseMemoryMcp.locale.en-US.yaml
pkg/winget/manifests/d/DeusData/CodebaseMemoryMcp/0.6.1/: DeusData.CodebaseMemoryMcp.installer.yaml  DeusData.CodebaseMemoryMcp.locale.en-US.yaml  DeusData.CodebaseMemoryMcp.yaml
scripts/: audit-grammar-security.sh  benchmark-search-graph.sh  build.sh  check-nolint-whitelist.sh  clone-bench-repos.sh  embed-frontend.sh  env.sh  extract_nomic_vectors.py  gen-py-stdlib.py  lint.sh  new-languages.json  security-allowlist.txt  security-audit.sh  security-fuzz.sh  security-install.sh  security-strings.sh  security-ui.sh  security-vendored.sh  security.sh  setup-windows.ps1  setup.sh  smoke-test.sh  soak-test.sh  test.sh  test_mcp_rapid_init.py  vendored-checksums.txt
scripts/ci/: check-virustotal.sh
scripts/hooks/: pre-commit
src/: main.c  main.cpp
src/cli/: cli.c  cli.cpp  cli.h  hook_augment.c  hook_augment.cpp  progress_sink.cpp  progress_sink.h
src/cypher/: cypher.c  cypher.cpp  cypher.h
src/discover/: discover.c  discover.cpp  discover.h  gitignore.c  gitignore.cpp  language.c  language.cpp  userconfig.c  userconfig.cpp  userconfig.h
src/foundation/: arena.c  arena.cpp  arena.h  cbm_atomic.h  compat.c  compat.h  compat_fs.c  compat_fs.cpp  compat_fs.h  compat_regex.cpp  compat_regex.h  compat_thread.c  compat_thread.h  constants.h  diagnostics.c  diagnostics.cpp  diagnostics.h  dyn_array.h  hash_table.c  hash_table.h  log.c  log.cpp  log.h  mem.c  mem.cpp  mem.h  platform.c  platform.cpp  platform.h  profile.h  recursion_whitelist.h  slab_alloc.cpp  slab_alloc.h  str_intern.h  str_util.c  str_util.cpp  str_util.h  system_info.c  system_info.cpp  system_info_internal.h  (+7 more)
src/graph_buffer/: graph_buffer.c  graph_buffer.cpp  graph_buffer.h
src/mcp/: mcp.c  mcp.cpp  mcp.h
src/pipeline/: artifact.c  artifact.cpp  artifact.h  fqn.c  fqn.cpp  httplink.c  lsp_resolve.h  pass_calls.c  pass_calls.cpp  pass_compile_commands.c  pass_compile_commands.cpp  pass_configlink.c  pass_configlink.cpp  pass_configures.c  pass_cross_repo.c  pass_cross_repo.cpp  pass_cross_repo.h  pass_definitions.c  pass_definitions.cpp  pass_enrichment.c  pass_enrichment.cpp  pass_envscan.c  pass_gitdiff.c  pass_gitdiff.cpp  pass_githistory.c  pass_githistory.cpp  pass_httplinks.c  pass_infrascan.c  pass_k8s.c  pass_k8s.cpp  pass_lsp_cross.c  pass_lsp_cross.cpp  pass_lsp_cross.h  pass_parallel.c  pass_parallel.cpp  pass_pkgmap.c  pass_pkgmap.cpp  pass_route_nodes.c  pass_route_nodes.cpp  pass_semantic.c  (+23 more)
src/semantic/: ast_profile.h  semantic.c  semantic.cpp  semantic.h
src/simhash/: minhash.c  minhash.cpp  minhash.h
src/store/: store.c  store.cpp  store.h
src/traces/: traces.c  traces.cpp  traces.h
src/ui/: config.c  config.cpp  config.h  embedded_assets.c  embedded_assets.h  http_server.c  http_server.cpp  http_server.h  layout3d.c  layout3d.cpp  layout3d.h
src/watcher/: watcher.c  watcher.cpp  watcher.h
test-infrastructure/: Dockerfile  Dockerfile.mingw  docker-compose.yml  run.sh
tests/: smoke_guard.sh  test_arena.c  test_c_lsp.c  test_cli.c  test_cs_lsp_bench.c  test_cypher.c  test_discover.c  test_dyn_array.c  test_extraction.c  test_fqn.c  test_framework.h  test_go_lsp.c  test_hash_table.c  test_httplink.c  test_incremental.c  test_integration.c  test_language.c  test_main.c  test_mcp.c  test_mem.c  test_parallel.c  test_path_alias.c  test_php_lsp.c  test_pipeline.c  test_py_lsp.c  test_py_lsp_bench.c  test_py_lsp_stress.c  test_registry.c  test_security.c  test_simhash.c  test_sqlite_writer.c  test_stack_overflow.c  test_store_bulk.c  test_store_checkpoint.c  test_store_nodes.c  test_store_pragmas.c  test_store_search.c  test_str_util.c  test_ts_lsp.c  test_type_rep.c  (+4 more)
